styles.css
:root {
    --black: #313131;
    --green: #A8B5A4;
    --cream: #EBE6E1;

}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: futura-pt,sans-serif;
    font-weight: 500;
    font-style: normal;
    font-size: 16px;   
}

a {
    text-decoration: none;
    color: var(--black);
}



header {
    display: flex;
    background: var(--green);
    justify-content: space-between;
    padding: 8px 15px;
}

header img{
    height: 40px;
}

header ul {
    margin-left: auto;
    display: flex;
    list-style-type: none;
    align-items: center;
    justify-content: space-around;
}

.desktop-ul li a{
    font-weight: bold;
    margin: 0 22px;
    color: var(--cream);
    font-size: 18px;
}


.hamburger {
    box-shadow: none;
}

.nav-ul {
    display: none;
}

.desktop-ul > button,
.nav-ul > button {
    font-weight: bold;
    font-size: 18px;
    padding: 8px 20px;
    outline: none;
    border: 6px solid var(--black);
    background: var(--cream);
    box-shadow: none;
}

button {
    font-weight: bold;
    font-size: 18px;
    padding: 8px 20px;
    outline: none;
    border: 6px solid var(--black);
    background: var(--cream);
    box-shadow: 8px 10px var(--green);
    transition: 0.5s all ease-in-out;
}

button:hover {
    cursor: pointer;
    box-shadow: 0px 0px var(--green);
}

section {
    display: flex;
    align-items: center;
    background-color: var(--cream)
}

section div {
    width: 70%;
  }

/* section:nth-child(2) {
    flex-direction: row-reverse;
  } */

div.full-image {
    height: 100vh;
    background-size: cover;
    background-position: center;
    top: 0;
}

div.image-1 {
    background-image: url("assets/fitzroypinnacle.jpg");
}
div.image-2 {
    background-image: url("assets/pinnacleLights@2x.jpg");
}
div.image-3 {
    background-image: url("assets/beersOnTap@2x.jpg");
}

div.image-4 {
    background-image: url("assets/parma.jpg");
}

div.image-5 {
    background-image: url("assets/wine.jpg");
}


.text {
    margin: auto;   
}



.text h1 {
    font-size: 4rem;
    text-transform: uppercase;
    font-weight: 700;
}

.text p {
    font-size: 18px;
    line-height: 1.7;
    margin: 15px 0;
}

.text button {
    margin-top: 20px;
}

.text button {
    margin-right: 20px!important;
}

.coloured-bar {
    background-color:var(--black); 
    padding: 42px 0;
}

.coloured-bar h1 {
    font-size: 4rem;
    text-align: center;
    color: var(--cream);
    text-transform: uppercase;
}

.weekly-specials {
    display: flex;
    justify-content: space-evenly;
    background-color: var(--green);
    padding: 55px 0 0 0;
}

.card {
    position: relative;
    top: -85px;
    background: white;
    width: 238px;
    border: 6px solid var(--black);
    text-align: center;
    box-shadow: 8px 10px var(--cream);
}
.card h2 {
    background-color: var(--green);
    color: var(--black);
    text-transform: uppercase;
    padding: 10px 0;
}
.card p {
    font-size: 1.2rem;
    margin-top: 4rem;
}

.card h3 {
    font-size: 5rem;
    margin-top: 4rem;
}

.info-section {
    display: flex;
    align-content: center;
    justify-content: space-around;
    padding: 20px 0 30px 0;
    background: var(--black)
}

.footer-section{
    display: flex;
    align-content: center;
    justify-content: space-around;
    padding: 20px 0 30px 0;
    background: var(--green)
}

.info-section h2 {
    font-size: 4rem;
    font-weight: 700;
    color: var(--cream);
    text-transform: uppercase;
}

.info-section p,
.info-section a {
    color: var(--cream);
}

.footer-section {
    background-color: var(--black);
    color: var(--cream);
    align-items: center;
    padding: 25px 0;
}

.footer-section h2 {
    font-size: 4rem;
    font-weight: 700;
    line-height: 1;
    text-transform: uppercase;
    margin-bottom: 20px;
}

.footer-section i {
    font-size: 2rem;
}

.footer-section a {
    color: var(--cream)
}

.footer-section i:last-of-type{
    margin-left: 15px;
}

.hamburger {
    display: none;
}

form {
    padding: 20px;
}

/* Style inputs with type="text", select elements and textareas */
input[type=text], select, textarea {
    width: 100%; /* Full width */
    padding: 12px; /* Some padding */ 
    border: 1px solid #ccc; /* Gray border */
    border-radius: 4px; /* Rounded borders */
    box-sizing: border-box; /* Make sure that padding and width stays in place */
    margin-top: 6px; /* Add a top margin */
    margin-bottom: 16px; /* Bottom margin */
    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
  }

  input[type=submit] {
      background: none;
      border: none;
      font-weight: bold;
      font-size: 18px;
  }


@media (max-width: 800px) {
    body {
      font-size: 16px;
    }

    h1 {
        font-size: 3rem;
    }
    
    h2 {
      font-size: 18px;
    }

    .desktop-ul {
        display: none;
    }
    
    
    .nav-ul {
        font-size: 2rem;
        list-style: none;
        width: 100%;
        height: 0;
        transition: all 0.5s ease-in-out;
        display: flex;
        background: var(--green);
        flex-direction: column;
        align-items: center;
        overflow-y: hidden;
    }

    .show {
        height: 250px;
    }

    .nav-ul li {
        margin: 20px 0;
        border-bottom: 6px solid var(--cream);
    }

    .nav-ul button{
        margin-bottom: 10px;
    }

   header .hamburger {
        display: block;
        cursor: pointer;
    }

    .coloured-bar h1,
    .text h1 {
        font-size: 3rem;
    }

    .text:first-of-type button:last-of-type {
        margin-left: 0;
    }
    
    section {
      display: block;
    }
    
    section div {
      width:  100%;
    }
    
    section div.text,
    .footer-section {
      padding: 30px;
    }

    article div.text {
        padding: 30px;
      }

    .weekly-specials {
        flex-direction: column;
        align-items: center;
    }

    .info-section {
        display: block;
    }

    .info-section h2 {
        font-size: 3rem;
    }
    .footer-section {
        flex-direction: column-reverse;
    }

    .footer-section h2 {
        font-size: 2rem;
    }

    .footer-section article:first-of-type {
        margin-top: 20px;
        text-align: center;

    }

    .weekly-specials .card {
        margin-bottom: 20px;
    }

    .weekly-specials .text {
        text-align: center;
    }
    
    div.full-image {
      height: 100vw;
     }

     .footer-section article:last-of-type {
        text-align: center;
        margin-bottom: 20px;
    }
  }

